public/assets/css/style.css
.menu-area {
    background-color: white; 
    height: 400px; 
    width: 400px; 
    border-radius: 25px;
}

.menu-title {
    text-align: center; 
    font-size: 28px; 
    font-weight: bold; 
    padding-top: 20px;
}

div.menu-area {
    padding-left: 20px;
}

.button-div {
    position: absolute; 
    right: 20px; 
    bottom: 10px;
}

.menu-button {
    background-color: #3CB371; 
    color: white; 
    border-radius: 10px; 
    font-weight: bold;
}

#messages { 
    list-style-type: none; 
    margin: 0; 
    padding: 0; 
    overflow: auto; 
    height: 95%; 
    background-color: white; }

#messages li { 
    padding: 5px 10px; 
}

#messages li:nth-child(odd) { 
    background: rgb(223, 218, 218); 
}

#chat-msg {
    position: absolute; 
    bottom: 0; 
    width: 95%;
}

#chat-send {
    position: absolute; 
    bottom: 0; 
    right: 0;
}

#chat-area {
    height: 100%; 
    width: 20%; 
    position: absolute; 
    right: 0; 
    background-color: white;
}

#game-area {
    width: 80%; 
    position: relative
}

#player-button {
    background-color: blue; 
    color: white; 
    border-radius: 15px;
}

.nickname-form {
    margin: auto;
    background: #8B4513;
    width: 300px;
    height: 100px;
    position: absolute;
    top: 50%; 
    left: 50%;
    margin: -50px 0 0 -150px;
    text-align: center;
}

#nickname-form {
    margin: 31px 0 0 29px;
}

